# roskit

roskit/: .gitignore  README.md  package-lock.json  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  tsconfig.base.json
roskit-studio/: index.html  package-lock.json  package.json  pnpm-lock.yaml
roskit-studio/src/: App.tsx  index.css
roskit-studio/src/components/behaviortree/: BTNodeComponent.tsx  BehaviorTreeView.tsx
roskit-studio/src/components/benchmark/: BenchmarkPanel.tsx
roskit-studio/src/components/compare/: CompareSelector.tsx  CompareView.tsx
roskit-studio/src/components/connection/: ConnectionDialog.tsx  ConnectionSidebar.tsx  RobotCard.tsx
roskit-studio/src/components/dashboard/: DashboardView.tsx
roskit-studio/src/components/diagnostics/: DiagnosticsPanel.tsx
roskit-studio/src/components/graph/: GraphView.tsx  RosNode.tsx  RosTopic.tsx
roskit-studio/src/components/layout/: Header.tsx  MainContent.tsx
roskit-studio/src/components/map/: MapCanvas.tsx  MapControls.tsx  MapLegend.tsx  MapView.tsx  TopicSelector.tsx
roskit-studio/src/components/map/hooks/: useMapSubscriptions.ts  useThreeScene.ts
roskit-studio/src/components/map/layers/: CostmapLayer.tsx  LaserScanLayer.tsx  OccupancyGridLayer.tsx  PathLayer.tsx  RobotLayer.tsx
roskit-studio/src/components/nodes/: NodeList.tsx  NodeRow.tsx
roskit-studio/src/components/parameters/: ParameterEditor.tsx
roskit-studio/src/components/performance/: PerformanceMonitor.tsx
roskit-studio/src/components/services/: ServiceCaller.tsx  ServiceList.tsx
roskit-studio/src/components/session/: SessionRecorder.tsx
roskit-studio/src/components/settings/: KeyboardShortcutsDialog.tsx  SettingsDialog.tsx  ThemeToggle.tsx
roskit-studio/src/components/topics/: TopicList.tsx  TopicPublisher.tsx  TopicRecorder.tsx  TopicRow.tsx  TopicSubscriber.tsx
roskit-studio/src/components/ui/: badge.tsx  button.tsx  card.tsx  dialog.tsx  input.tsx  label.tsx  popover.tsx  progress.tsx  scroll-area.tsx  select.tsx  slider.tsx  switch.tsx  tabs.tsx  tooltip.tsx
roskit-studio/src/hooks/: useKeyboardShortcuts.ts  useRos.ts
roskit-studio/src/lib/benchmark/: calculator.ts
roskit-studio/src/lib/export/: exportData.ts
roskit-studio/src/lib/map/: colorMaps.ts
roskit-studio/src/lib/roskit/: connection.ts  topics.ts
roskit-studio/src/stores/: behaviorTreeStore.ts  compareStore.ts  connectionStore.ts  diagnosticStore.ts  mapStore.ts  roswebStore.ts  sessionStore.ts  settingsStore.ts  topicStore.ts
roskit-studio/src/types/: behaviortree.ts  benchmark.ts  diagnostics.ts  map.ts  ros.ts  session.ts
roskit/.github/workflows/: ci.yml
roskit/bridge/python/roskit_bridge/: package.xml  setup.cfg  setup.py
roskit/bridge/python/roskit_bridge/launch/: roskit_bridge.launch.py
roskit/bridge/python/roskit_bridge/roskit_bridge/: __init__.py  bridge_node.py  protocol.py
roskit/bridge/python/roskit_bridge/roskit_bridge/encoders/: __init__.py  base.py  cbor_encoder.py  image.py  laser_scan.py  occupancy_grid.py
roskit/bridge/python/roskit_bridge/tests/: __init__.py  test_cache.py  test_golden_conformance.py  test_media_roundtrip.py  test_tls_auth.py
roskit/bridge/rust/roskit-bridge-rs/: Cargo.toml  Dockerfile
roskit/bridge/rust/roskit-bridge-rs/src/: auth.rs  lib.rs  main.rs  protocol.rs  rate_limit.rs  ros2.rs  server.rs  tls.rs
roskit/bridge/rust/roskit-bridge-rs/src/encoders/: cbor.rs  image.rs  laser_scan.rs  mod.rs  occupancy_grid.rs
roskit/bridge/rust/roskit-bridge-rs/tests/: golden_conformance.rs  media_roundtrip.rs  protocol_integration.rs  resource_cleanup.rs  ros2_e2e.rs  tls_auth_integration.rs
roskit/bridge/rust/roskit_bridge_rs/: CMakeLists.txt  package.xml
roskit/bridge/rust/roskit_bridge_rs/config/: bridge_params.yaml
roskit/bridge/rust/roskit_bridge_rs/launch/: roskit_bridge.launch.py  roskit_bridge_secure.launch.py
roskit/bridge/rust/roskit_bridge_rs/scripts/: install.sh
roskit/protocol-tests/: conformance.test.ts  conformance_test.py  conformance_test.rs  golden-vectors.json
