[package]
name = "roskit-bridge"
version = "0.1.0"
edition = "2021"
authors = ["RosKit Contributors"]
description = "High-performance ROS2 web bridge with binary protocol support"
license = "MIT"
repository = "https://github.com/roskit/roskit"
keywords = ["ros", "ros2", "robotics", "websocket", "bridge"]
categories = ["science::robotics", "network-programming"]

[dependencies]
# Async runtime
tokio = { version = "1.40", features = ["full"] }

# WebSocket
tokio-tungstenite = { version = "0.24", features = ["rustls-tls-native-roots"] }
futures-util = "0.3"

# TLS support
tokio-rustls = "0.26"
rustls = "0.23"
rustls-pemfile = "2.1"

# ROS2 bindings (using r2r for better stability)
r2r = "0.9"

# Serialization
ciborium = "0.2"  # CBOR encoding
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Image encoding
image = { version = "0.25", default-features = false, features = ["png", "jpeg"] }

# Utilities
bytes = "1.7"
thiserror = "2.0"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
clap = { version = "4.5", features = ["derive"] }
parking_lot = "0.12"

[dev-dependencies]
hex = "0.4"
serde_json = "1.0"
image = { version = "0.25", default-features = false, features = ["png", "jpeg"] }
tempfile = "3.14"

[profile.release]
lto = true
codegen-units = 1
opt-level = 3

[[bin]]
name = "roskit-bridge"
path = "src/main.rs"
