[package]
name = "roskit-bridge"
version = "0.1.0"
edition = "2021"
authors = ["RosKit Contributors"]
description = "High-performance ROS2 web bridge with binary protocol support"
license = "MIT"
repository = "https://github.com/roskit/roskit"
keywords = ["ros", "ros2", "robotics", "websocket", "bridge"]
categories = ["science::robotics", "network-programming"]

[dependencies]
# Async runtime
tokio = { version = "1.40", features = ["full", "sync"] }

# WebSocket
tokio-tungstenite = { version = "0.24", features = ["rustls-tls-native-roots"] }
futures-util = "0.3"

# TLS support
tokio-rustls = "0.26"
rustls = "0.23"
rustls-pemfile = "2.1"

# ROS2 bindings - using rclrs (official ROS2 Rust client)
# These packages are NOT on crates.io - they must come from a ros2_rust workspace
# When building with ros2 feature, you must:
# 1. Clone ros2_rust: git clone https://github.com/ros2-rust/ros2_rust.git
# 2. Source ROS2: source /opt/ros/humble/setup.bash
# 3. Build with colcon: colcon build
# 4. Source the workspace: source install/setup.bash
# 5. Then cargo will find the packages
#
# For standalone builds without ROS2, omit --features ros2
rclrs = { version = "0.4", optional = true }
rosidl_runtime_rs = { version = "0.4", optional = true }

# Standard ROS2 message types - sourced from ros2_rust workspace (not crates.io)
std_msgs = { version = "4", optional = true }
geometry_msgs = { version = "4", optional = true }
sensor_msgs = { version = "4", optional = true }
nav_msgs = { version = "4", optional = true }
std_srvs = { version = "4", optional = true }

# Serialization
ciborium = "0.2"  # CBOR encoding
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Image encoding
image = { version = "0.25", default-features = false, features = ["png", "jpeg"] }

# Utilities
bytes = "1.7"
thiserror = "2.0"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
clap = { version = "4.5", features = ["derive"] }
parking_lot = "0.12"
crossbeam-channel = "0.5"

[features]
default = []
# Enable ROS2 integration via rclrs (requires ros2_rust workspace)
ros2 = ["rclrs", "rosidl_runtime_rs", "std_msgs", "geometry_msgs", "sensor_msgs", "nav_msgs", "std_srvs"]

[dev-dependencies]
hex = "0.4"
serde_json = "1.0"
image = { version = "0.25", default-features = false, features = ["png", "jpeg"] }
tempfile = "3.14"

[profile.release]
lto = true
codegen-units = 1
opt-level = 3

[[bin]]
name = "roskit-bridge"
path = "src/main.rs"
