<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>roskit_bridge_rs</name>
  <version>0.1.0</version>
  <description>High-performance Rust web bridge for ROS2 with binary protocol support</description>
  <maintainer email="dev@roskit.io">RosKit Contributors</maintainer>
  <license>MIT</license>

  <url type="website">https://github.com/roskit/roskit</url>
  <url type="repository">https://github.com/roskit/roskit</url>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <!-- ROS2 message dependencies -->
  <depend>rclcpp</depend>
  <depend>std_msgs</depend>
  <depend>geometry_msgs</depend>
  <depend>sensor_msgs</depend>
  <depend>nav_msgs</depend>
  <depend>tf2_msgs</depend>
  <depend>std_srvs</depend>
  <depend>rcl_interfaces</depend>

  <!-- Launch dependencies -->
  <exec_depend>launch</exec_depend>
  <exec_depend>launch_ros</exec_depend>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
